modules/gdscript/tests/scripts/parser/errors/nested_typed_collection_depth_exceeded.gd
func test():
	var over_limit: Array[Array[Array[Array[Array[Array[Array[Array[Array[int]]]]]]]]]
	print(over_limit)
